--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -4,26 +4,22 @@
             <h1 id="site-title">Blog</h1>
             <h2 id="site-mid-title">Create your own world!</h2>
         </div>
-
-        <div class="last-blogs">
-            {{!-- <div class="info">
-                <h2 class="title">Best Finance and Investment Blogs</h2>
-                <h4 class="genre">Finance</h4>
-                <div class="see-more">
-                    <a href="#">See More...</a>
+        {{#if blogs}}
+            <div class="last-blogs">
+                {{#each blogs}}
+                <div class="info">
+                    <h2 class="title">{{title}}</h2>
+                    <h4 class="genre">{{category}}</h4>
+                    <div class="see-more">
+                        <a href="/blogs/{{_id}}/details">See More...</a>
+                    </div>
                 </div>
-            </div> --}}
-            {{#each blogs}}
-                {{>blog}}
-            {{else}}
-                <article class="not-available-blogs">
-                    <h1>No blogs created yet.</h1>
-                </article>
-            {{/each}}
-        </div>
-
-        <!--If there are still no blog posts on the database -->
-
-
+                {{/each}}
+            </div>
+        {{else}}
+            <article class="not-available-blogs">
+                <h1>No blogs created yet.</h1>
+            </article>
+        {{/if}}
     </div>
 </main>
