changing the methods for collecting donations for blogs in the profile

--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -4,7 +4,7 @@
             <div class="user-logo">
                 <img src="./images/user-logo.webp">
             </div>
-            <h1 class="user-email">{{email}}</h1>
+            <h1 class="user-email">{{user.email}}</h1>
             <h2 class="created-blogs-count">Total Created Blogs: {{totalBlogs}}</h2>
             <h2 class="followed-blogs-count">Total Followed Blogs: {{totalFollowBlogs}}</h2>
         </div>
